# mini-pg

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  pyproject.toml  solution.py
.github/workflows/: lint.yml
docs/: appendix.md  modal.md  rules.md
instructions/: weco_instructions.md
mini_pg/: __init__.py  check_solution.py  config.py  data.py  modal_app.py  model.py  quality_gate.py  quantize.py  train.py
record/: README.md  template.md
record/20260624-1310-baseline/: README.md  solution.py
scripts/: check.sh  lint.sh  quality_gate.sh  score.sh  smoke.sh  verify.sh  weco.sh  weco_eval.sh
